<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_nav_home"
            android:icon="@drawable/home_store"
            android:title="@string/user_nav_home_store" />
        <item
            android:id="@+id/user_nav_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/user_nav_shopping_cart" />
        <item
            android:id="@+id/user_nav_history"
            android:icon="@drawable/shopping_history"
            android:title="@string/user_nav_shopping_history" />
    </group>
    <item android:title="@string/user_nav_account">
        <menu>
            <item
                android:id="@+id/user_logout"
                android:icon="@drawable/log_out"
                android:title="@string/user_nav_logout" />
        </menu>
    </item>
</menu>